--- a/dist.ini
+++ b/dist.ini
@@ -1,18 +1,24 @@
+;---------------------------------
+author  = perlancar <perlancar@cpan.org>
+copyright_holder = perlancar <perlancar@cpan.org>
+license = Perl_5
+;---------------------------------
+
 version=0.003
 
 name=Pod-Weaver-Plugin-ArrayData
 
 [@Author::PERLANCAR]
-:version=0.603
+:version=0.606
 
 [Prereqs]
 perl=5.010001
 strict=0
 File::Slurper=0
 File::Temp=0.2307
-Perinci::Result::Format::Lite=0.277
-List::Util=1.45
+List::Util=1.54
 Markdown::To::POD=0
+Perinci::Result::Format::Lite=0.286
 ;!lint_prereqs assume-used
 Pod::Weaver=0
 Pod::Weaver::Role::AddTextToSection=0.06
